test/testdata/functions/max_params_error.lox
// error: cannot define more than 255 function parameters
// lint error: cannot define more than 255 function parameters
fun f(p1, p2, p3, p4, p5, p6, p7, p8, p9, p10, p11, p12, p13, p14, p15, p16, p17, p18, p19, p20, p21, p22, p23, p24, p25, p26, p27, p28, p29, p30, p31, p32, p33, p34, p35, p36, p37, p38, p39, p40, p41, p42, p43, p44, p45, p46, p47, p48, p49, p50, p51, p52, p53, p54, p55, p56, p57, p58, p59, p60, p61, p62, p63, p64, p65, p66, p67, p68, p69, p70, p71, p72, p73, p74, p75, p76, p77, p78, p79, p80, p81, p82, p83, p84, p85, p86, p87, p88, p89, p90, p91, p92, p93, p94, p95, p96, p97, p98, p99, p100, p101, p102, p103, p104, p105, p106, p107, p108, p109, p110, p111, p112, p113, p114, p115, p116, p117, p118, p119, p120, p121, p122, p123, p124, p125, p126, p127, p128, p129, p130, p131, p132, p133, p134, p135, p136, p137, p138, p139, p140, p141, p142, p143, p144, p145, p146, p147, p148, p149, p150, p151, p152, p153, p154, p155, p156, p157, p158, p159, p160, p161, p162, p163, p164, p165, p166, p167, p168, p169, p170, p171, p172, p173, p174, p175, p176, p177, p178, p179, p180, p181, p182, p183, p184, p185, p186, p187, p188, p189, p190, p191, p192, p193, p194, p195, p196, p197, p198, p199, p200, p201, p202, p203, p204, p205, p206, p207, p208, p209, p210, p211, p212, p213, p214, p215, p216, p217, p218, p219, p220, p221, p222, p223, p224, p225, p226, p227, p228, p229, p230, p231, p232, p233, p234, p235, p236, p237, p238, p239, p240, p241, p242, p243, p244, p245, p246, p247, p248, p249, p250, p251, p252, p253, p254, p255, p256) {
  _ = p1;
  _ = p2;
  _ = p3;
  _ = p4;
  _ = p5;
  _ = p6;
  _ = p7;
  _ = p8;
  _ = p9;
  _ = p10;
  _ = p11;
  _ = p12;
  _ = p13;
  _ = p14;
  _ = p15;
  _ = p16;
  _ = p17;
  _ = p18;
  _ = p19;
  _ = p20;
  _ = p21;
  _ = p22;
  _ = p23;
  _ = p24;
  _ = p25;
  _ = p26;
  _ = p27;
  _ = p28;
  _ = p29;
  _ = p30;
  _ = p31;
  _ = p32;
  _ = p33;
  _ = p34;
  _ = p35;
  _ = p36;
  _ = p37;
  _ = p38;
  _ = p39;
  _ = p40;
  _ = p41;
  _ = p42;
  _ = p43;
  _ = p44;
  _ = p45;
  _ = p46;
  _ = p47;
  _ = p48;
  _ = p49;
  _ = p50;
  _ = p51;
  _ = p52;
  _ = p53;
  _ = p54;
  _ = p55;
  _ = p56;
  _ = p57;
  _ = p58;
  _ = p59;
  _ = p60;
  _ = p61;
  _ = p62;
  _ = p63;
  _ = p64;
  _ = p65;
  _ = p66;
  _ = p67;
  _ = p68;
  _ = p69;
  _ = p70;
  _ = p71;
  _ = p72;
  _ = p73;
  _ = p74;
  _ = p75;
  _ = p76;
  _ = p77;
  _ = p78;
  _ = p79;
  _ = p80;
  _ = p81;
  _ = p82;
  _ = p83;
  _ = p84;
  _ = p85;
  _ = p86;
  _ = p87;
  _ = p88;
  _ = p89;
  _ = p90;
  _ = p91;
  _ = p92;
  _ = p93;
  _ = p94;
  _ = p95;
  _ = p96;
  _ = p97;
  _ = p98;
  _ = p99;
  _ = p100;
  _ = p101;
  _ = p102;
  _ = p103;
  _ = p104;
  _ = p105;
  _ = p106;
  _ = p107;
  _ = p108;
  _ = p109;
  _ = p110;
  _ = p111;
  _ = p112;
  _ = p113;
  _ = p114;
  _ = p115;
  _ = p116;
  _ = p117;
  _ = p118;
  _ = p119;
  _ = p120;
  _ = p121;
  _ = p122;
  _ = p123;
  _ = p124;
  _ = p125;
  _ = p126;
  _ = p127;
  _ = p128;
  _ = p129;
  _ = p130;
  _ = p131;
  _ = p132;
  _ = p133;
  _ = p134;
  _ = p135;
  _ = p136;
  _ = p137;
  _ = p138;
  _ = p139;
  _ = p140;
  _ = p141;
  _ = p142;
  _ = p143;
  _ = p144;
  _ = p145;
  _ = p146;
  _ = p147;
  _ = p148;
  _ = p149;
  _ = p150;
  _ = p151;
  _ = p152;
  _ = p153;
  _ = p154;
  _ = p155;
  _ = p156;
  _ = p157;
  _ = p158;
  _ = p159;
  _ = p160;
  _ = p161;
  _ = p162;
  _ = p163;
  _ = p164;
  _ = p165;
  _ = p166;
  _ = p167;
  _ = p168;
  _ = p169;
  _ = p170;
  _ = p171;
  _ = p172;
  _ = p173;
  _ = p174;
  _ = p175;
  _ = p176;
  _ = p177;
  _ = p178;
  _ = p179;
  _ = p180;
  _ = p181;
  _ = p182;
  _ = p183;
  _ = p184;
  _ = p185;
  _ = p186;
  _ = p187;
  _ = p188;
  _ = p189;
  _ = p190;
  _ = p191;
  _ = p192;
  _ = p193;
  _ = p194;
  _ = p195;
  _ = p196;
  _ = p197;
  _ = p198;
  _ = p199;
  _ = p200;
  _ = p201;
  _ = p202;
  _ = p203;
  _ = p204;
  _ = p205;
  _ = p206;
  _ = p207;
  _ = p208;
  _ = p209;
  _ = p210;
  _ = p211;
  _ = p212;
  _ = p213;
  _ = p214;
  _ = p215;
  _ = p216;
  _ = p217;
  _ = p218;
  _ = p219;
  _ = p220;
  _ = p221;
  _ = p222;
  _ = p223;
  _ = p224;
  _ = p225;
  _ = p226;
  _ = p227;
  _ = p228;
  _ = p229;
  _ = p230;
  _ = p231;
  _ = p232;
  _ = p233;
  _ = p234;
  _ = p235;
  _ = p236;
  _ = p237;
  _ = p238;
  _ = p239;
  _ = p240;
  _ = p241;
  _ = p242;
  _ = p243;
  _ = p244;
  _ = p245;
  _ = p246;
  _ = p247;
  _ = p248;
  _ = p249;
  _ = p250;
  _ = p251;
  _ = p252;
  _ = p253;
  _ = p254;
  _ = p255;
  _ = p256;
}

_ = f;
